--- a/packages/qgis_umesh.vcxproj.filters
+++ b/packages/qgis_umesh.vcxproj.filters
@@ -104,6 +104,9 @@
     <CustomBuild Include="include\map_property_window.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="include\edit_observation_points_window.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\netcdf.h">
@@ -125,9 +128,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\read_json.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\edit_observation_points_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
