Link1D2D format on JSON-file was adjusted, now it can be read (1d2d_mapping-file) READ_JSON renamed to json_reader (more conform my local test program)

--- a/packages/qgis_umesh.vcxproj.filters
+++ b/packages/qgis_umesh.vcxproj.filters
@@ -136,7 +136,7 @@
     <ClInclude Include="include\data_struct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\read_json.h">
+    <ClInclude Include="include\json_reader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
